how much money do you have in the bazaar?